--- a/example/network/index.html
+++ b/example/network/index.html
@@ -120,37 +120,37 @@
     const gData = { nodes, links };
 
     const Graph = ForceGraph()(document.getElementById('graph'))
-      .graphData(gData)
-      .enableNodeDrag(false)
-      .onEngineTick(() => Graph.pauseAnimation())
-      .linkWidth(() => 2)
-      .linkColor(() => '#aaa')
-      .nodeCanvasObject((node, ctx, globalScale) => {
-        if (node.id === centerNodeId) {
+    .graphData(gData)
+    .enableNodeDrag(false)
+    .onEngineTick(() => Graph.pauseAnimation())
+    .linkWidth(() => 2)
+    .linkColor(() => '#aaa')
+    .nodeCanvasObject((node, ctx, globalScale) => {
+      if (node.id === centerNodeId) {
           // Draw rings
-          ctx.save();
-          ctx.strokeStyle = '#ddd';
-          ctx.lineWidth = 1 / globalScale;
-          for (let i = 0; i < maxLayers; i++) {
-            ctx.beginPath();
-            ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
-            ctx.stroke();
-          }
-          ctx.restore();
-          return;
+        ctx.save();
+        ctx.strokeStyle = '#ddd';
+        ctx.lineWidth = 1 / globalScale;
+        for (let i = 0; i < maxLayers; i++) {
+          ctx.beginPath();
+          ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
+          ctx.stroke();
         }
+        ctx.restore();
+        return;
+      }
 
-        const label = node.name || '';
-        ctx.beginPath();
-        ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI);
-        ctx.fillStyle = node.color;
-        ctx.fill();
+      const label = node.name || '';
+      ctx.beginPath();
+      ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI);
+      ctx.fillStyle = node.color;
+      ctx.fill();
 
-        ctx.font = `${12 / globalScale}px Sans-Serif`;
-        ctx.textAlign = 'center';
-        ctx.fillStyle = '#000';
-        ctx.fillText(label, node.x, node.y - 8);
-      });
+      ctx.font = `${12 / globalScale}px Sans-Serif`;
+      ctx.textAlign = 'center';
+      ctx.fillStyle = '#000';
+      ctx.fillText(label, node.x, node.y - 8);
+    });
 
     function getCheckedFilters(className) {
       return Array.from(document.querySelectorAll(`.filter-${className}:checked`)).map(cb => cb.value);
@@ -173,20 +173,24 @@
 
       const filteredNodes = nodes.filter(n =>
         n.id === centerNodeId || (n.radialIndex !== undefined && radialToInclude.has(n.radialIndex))
-      );
+        );
 
-      const nodeIdSet = new Set(filteredNodes.map(n => n.id));
+      const nodeMap = new Map(filteredNodes.map(n => [n.id, n]));
 
-      const filteredLinks = links.filter(link =>
-        nodeIdSet.has(link.source) && nodeIdSet.has(link.target)
-      );
+      const filteredLinks = links
+      .filter(link => nodeMap.has(link.source) && nodeMap.has(link.target))
+      .map(link => ({
+        source: nodeMap.get(link.source),
+        target: nodeMap.get(link.target),
+        radialIndex: link.radialIndex
+      }));
 
       Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
     }
 
     document.querySelectorAll('.filter-category, .filter-impact').forEach(cb =>
       cb.addEventListener('change', applyFilters)
-    );
-  </script>
-</body>
-</html>
+      );
+    </script>
+  </body>
+  </html>
