--- a/example/network/index.html
+++ b/example/network/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-  <style> 
+<head>
+  <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; position: absolute; top: 0; left: 0; z-index: 0; }
     #controls {
@@ -14,82 +14,62 @@
       border-radius: 8px;
       font-family: sans-serif;
       max-height: 90vh;
-      overflow: auto;
+      overflow-y: auto;
     }
-    .section-title { font-weight: bold; margin-top: 10px; }
+    #controls h3 {
+      margin-top: 10px;
+      margin-bottom: 5px;
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/force-graph"></script>
 </head>
-
 <body>
   <div id="controls">
-    <div class="section-title">PORTFOLIO & CATEGORIES</div>
-    <label><input type="checkbox" class="filter-category" value="Investment"> Investment</label><br>
-    <label><input type="checkbox" class="filter-category" value="Forces"> Forces</label><br>
-    <label><input type="checkbox" class="filter-category" value="Consultancies"> Consultancies</label><br>
-    <label><input type="checkbox" class="filter-category" value="Cities.culture.art"> Cities.culture.art</label><br>
-    <label><input type="checkbox" class="filter-category" value="Ecosystems"> Ecosystems</label><br>
-    <label><input type="checkbox" class="filter-category" value="Yesteryears"> Yesteryears</label><br>
-
-    <div class="section-title">APPROACH & IMPACT</div>
-    <label><input type="checkbox" class="filter-impact" value="Strategy.Culture"> Strategy.Culture</label><br>
-    <label><input type="checkbox" class="filter-impact" value="Branding"> Branding</label><br>
-    <label><input type="checkbox" class="filter-impact" value="Retail"> Retail</label><br>
-    <label><input type="checkbox" class="filter-impact" value="East.West"> East.West</label><br>
-    <label><input type="checkbox" class="filter-impact" value="Edu.Learning.Collective"> Edu.Learning.Collective</label><br>
-    <label><input type="checkbox" class="filter-impact" value="Creative Solution"> Creative Solution</label><br>
+    <h3>PORTFOLIO & CATEGORIES</h3>
+    <div id="categoryFilters"></div>
+    <h3>IMPACT</h3>
+    <div id="impactFilters"></div>
   </div>
-
   <div id="graph"></div>
 
   <script>
-    const baseRadius = 100;
-    const ringSpacing = 80;
-    const maxLayers = 6;
-
-    const impactToRing = {
-      "Strategy.Culture": 1,
-      "Branding": 2,
-      "Retail": 3,
-      "East.West": 4,
-      "Edu.Learning.Collective": 5,
-      "Creative Solution": 6
-    };
-
-    const ringColors = ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'];
-
-    const radialLines = [
-      { name: "URF / TX The BOX", categories: ["Investment"], impacts: ["Retail"] },
-      { name: "SAUVEREIGN", categories: ["Consultancies"], impacts: ["Branding", "Retail"] },
-      { name: "DONGHAI", categories: ["Ecosystems"], impacts: ["East.West", "Strategy.Culture"] },
-      { name: "EASTERN SEAS", categories: ["Yesteryears"], impacts: ["Strategy.Culture"] },
-      { name: "DANDELION", categories: ["Cities.culture.art"], impacts: ["Edu.Learning.Collective"] },
-      { name: "BILI Q", categories: ["Forces"], impacts: ["Creative Solution", "Strategy.Culture"] },
-      { name: "KYOTO ART BANK", categories: ["Cities.culture.art"], impacts: ["Edu.Learning.Collective", "East.West"] },
-      { name: "ARAMIS WINES", categories: ["Investment", "Yesteryears"], impacts: ["Branding", "East.West"] }
+    const entities = [
+      { name: 'URF / TX The BOX', categories: ['Investment'], impacts: ['Retail'] },
+      { name: 'SAUVEREIGN', categories: ['Forces'], impacts: ['Branding', 'Retail'] },
+      { name: 'DONGHAI', categories: ['Cities.culture.art'], impacts: ['East.West', 'Strategy.Culture'] },
+      { name: 'EASTERN SEAS', categories: ['Consultancies'], impacts: ['Creative Solution'] },
+      { name: 'DANDELION', categories: ['Yesteryears'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+      { name: 'BILI Q', categories: ['Investment'], impacts: ['East.West'] },
+      { name: 'KYOTO ART BANK', categories: ['Ecosystems'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'ARAMIS WINES', categories: ['Yesteryears'], impacts: ['Branding'] }
     ];
 
-    const nodes = [];
-    const links = [];
+    const impactRingMap = {
+      'Strategy.Culture': 0,
+      'Branding': 1,
+      'Retail': 2,
+      'East.West': 3,
+      'Edu.Learning.Collective': 4,
+      'Creative Solution': 5
+    };
+
+    const ringSpacing = 80;
+    const baseRadius = 100;
+    const ringColors = ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b', '#8ecae6'];
+
     let nodeId = 0;
+    const nodes = [], links = [];
 
     const centerNodeId = nodeId++;
-    nodes.push({
-      id: centerNodeId,
-      fx: 0,
-      fy: 0,
-      size: 6,
-      color: '#000000'
-    });
+    nodes.push({ id: centerNodeId, fx: 0, fy: 0, size: 4, color: '#000000' });
 
-    radialLines.forEach((line, i) => {
-      const angle = (2 * Math.PI * i) / radialLines.length;
-      const radialIndex = i;
+    entities.forEach((entity, index) => {
+      const angle = (2 * Math.PI * index) / entities.length;
       let lastNodeId = centerNodeId;
 
-      line.impacts.forEach((impact, j) => {
-        const layer = impactToRing[impact] - 1;
-        const radius = baseRadius + layer * ringSpacing;
+      entity.impacts.forEach(impact => {
+        const ringIndex = impactRingMap[impact] ?? 0;
+        const radius = baseRadius + ringIndex * ringSpacing;
         const x = radius * Math.cos(angle);
         const y = radius * Math.sin(angle);
 
@@ -98,19 +78,18 @@
           id: thisNodeId,
           fx: x,
           fy: y,
-          radialIndex,
-          name: line.name,
-          categories: line.categories,
-          impacts: line.impacts,
-          impact,
-          size: 5,
-          color: ringColors[layer % ringColors.length]
+          name: entity.name,
+          categories: entity.categories,
+          impact: impact,
+          radialIndex: index,
+          size: 6,
+          color: ringColors[ringIndex % ringColors.length]
         });
 
         links.push({
           source: lastNodeId,
           target: thisNodeId,
-          radialIndex
+          radialIndex: index
         });
 
         lastNodeId = thisNodeId;
@@ -118,42 +97,46 @@
     });
 
     const gData = { nodes, links };
-
     const Graph = ForceGraph()(document.getElementById('graph'))
-    .graphData(gData)
-    .enableNodeDrag(false)
-    .onEngineTick(() => Graph.pauseAnimation())
-    .linkWidth(() => 2)
-    .linkColor(() => '#aaa')
-    .nodeCanvasObject((node, ctx, globalScale) => {
-      if (node.id === centerNodeId) {
-          // Draw rings
-        ctx.save();
-        ctx.strokeStyle = '#ddd';
-        ctx.lineWidth = 1 / globalScale;
-        for (let i = 0; i < maxLayers; i++) {
-          ctx.beginPath();
-          ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
-          ctx.stroke();
-        }
-        ctx.restore();
-        return;
-      }
+      .graphData(gData)
+      .enableNodeDrag(false)
+      .linkDirectionalParticles(0)
+      .linkWidth(() => 1)
+      .linkColor(() => '#999')
+      .nodeCanvasObject((node, ctx) => {
+        if (node.id === centerNodeId) return;
 
-      const label = node.name || '';
-      ctx.beginPath();
-      ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI);
-      ctx.fillStyle = node.color;
-      ctx.fill();
+        ctx.beginPath();
+        ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI);
+        ctx.fillStyle = node.color;
+        ctx.fill();
+      });
 
-      ctx.font = `${12 / globalScale}px Sans-Serif`;
-      ctx.textAlign = 'center';
-      ctx.fillStyle = '#000';
-      ctx.fillText(label, node.x, node.y - 8);
-    });
+    // Filters UI
+    const allCategories = [...new Set(entities.flatMap(e => e.categories))];
+    const allImpacts = [...new Set(entities.flatMap(e => e.impacts))];
 
-    function getCheckedFilters(className) {
-      return Array.from(document.querySelectorAll(`.filter-${className}:checked`)).map(cb => cb.value);
+    function createCheckbox(filterType, value) {
+      const label = document.createElement('label');
+      label.style.display = 'block';
+      const checkbox = document.createElement('input');
+      checkbox.type = 'checkbox';
+      checkbox.value = value;
+      checkbox.name = filterType;
+      checkbox.onchange = applyFilters;
+      label.appendChild(checkbox);
+      label.appendChild(document.createTextNode(' ' + value));
+      return label;
+    }
+
+    const categoryDiv = document.getElementById('categoryFilters');
+    allCategories.forEach(cat => categoryDiv.appendChild(createCheckbox('category', cat)));
+
+    const impactDiv = document.getElementById('impactFilters');
+    allImpacts.forEach(imp => impactDiv.appendChild(createCheckbox('impact', imp)));
+
+    function getCheckedFilters(name) {
+      return [...document.querySelectorAll(`input[name="${name}"]:checked`)].map(cb => cb.value);
     }
 
     function applyFilters() {
@@ -173,24 +156,20 @@
 
       const filteredNodes = nodes.filter(n =>
         n.id === centerNodeId || (n.radialIndex !== undefined && radialToInclude.has(n.radialIndex))
-        );
+      );
 
       const nodeMap = new Map(filteredNodes.map(n => [n.id, n]));
 
       const filteredLinks = links
-      .filter(link => nodeMap.has(link.source) && nodeMap.has(link.target))
-      .map(link => ({
-        source: nodeMap.get(link.source),
-        target: nodeMap.get(link.target),
-        radialIndex: link.radialIndex
-      }));
+        .filter(link => nodeMap.has(link.source.id ?? link.source) && nodeMap.has(link.target.id ?? link.target))
+        .map(link => ({
+          source: nodeMap.get(link.source.id ?? link.source),
+          target: nodeMap.get(link.target.id ?? link.target),
+          radialIndex: link.radialIndex
+        }));
 
       Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
     }
-
-    document.querySelectorAll('.filter-category, .filter-impact').forEach(cb =>
-      cb.addEventListener('change', applyFilters)
-      );
-    </script>
-  </body>
-  </html>
+  </script>
+</body>
+</html>
