added max layers

--- a/example/network/index.html
+++ b/example/network/index.html
@@ -56,6 +56,7 @@
     const ringSpacing = 80;
     const baseRadius = 100;
     const ringColors = ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b', '#8ecae6'];
+    const maxLayers = 6;
 
     let nodeId = 0;
     const nodes = [], links = [];
