added in all the entities

--- a/example/network/index.html
+++ b/example/network/index.html
@@ -35,13 +35,45 @@
   <script>
     const entities = [
       { name: 'URF / TX The BOX', categories: ['Investment'], impacts: ['Retail'] },
-      { name: 'SAUVEREIGN', categories: ['Forces'], impacts: ['Branding', 'Retail'] },
-      { name: 'DONGHAI', categories: ['Cities.culture.art'], impacts: ['East.West', 'Strategy.Culture'] },
-      { name: 'EASTERN SEAS', categories: ['Consultancies'], impacts: ['Creative Solution'] },
-      { name: 'DANDELION', categories: ['Yesteryears'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+      { name: 'SAUVEREIGN', categories: ['Investment'], impacts: ['Branding', 'Retail'] },
+      { name: 'DONGHAI', categories: ['Investment'], impacts: ['East.West', 'Strategy.Culture'] },
+      { name: 'EASTERN SEAS', categories: ['Investment'], impacts: ['Creative Solution'] },
+      { name: 'DANDELION', categories: ['YInvestment'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
       { name: 'BILI Q', categories: ['Investment'], impacts: ['East.West'] },
-      { name: 'KYOTO ART BANK', categories: ['Ecosystems'], impacts: ['Culture', 'Creative Solution'] },
-      { name: 'ARAMIS WINES', categories: ['Yesteryears'], impacts: ['Branding'] }
+      { name: 'KYOTO ART BANK', categories: ['Investment'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'ARAMIS WINES', categories: ['Investment'], impacts: ['Branding'] },
+      { name: 'SEIICHI MIZUNO', categories: ['Forces'], impacts: ['Retail'] },
+      { name: 'MARIO TESTINO', categories: ['Forces'], impacts: ['Branding', 'Retail'] },
+      { name: 'JUDY DOBIAS', categories: ['Forces'], impacts: ['East.West', 'Strategy.Culture'] },
+      { name: 'THE CROSSES', categories: ['Forces'], impacts: ['Creative Solution'] },
+      { name: 'SUNTCHI', categories: ['Forces'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+      { name: 'SHANGHAI INDUSTRIAL MUSEUM', categories: ['Consultancies'], impacts: ['East.West'] },
+      { name: 'HONG KONG JOCKEY CLUB', categories: ['Consultancies'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'MOLESKINE', categories: ['Consultancies'], impacts: ['Branding'] },
+      { name: 'LUXEMBOURG IN CHINA', categories: ['Cities.culture.art'], impacts: ['Retail'] },
+      { name: 'TONGJI UNIVERSITY', categories: ['Cities.culture.art'], impacts: ['Branding', 'Retail'] },
+      { name: 'UNIVERSITY COLLABORATIONS', categories: ['Cities.culture.art'], impacts: ['East.West', 'Strategy.Culture'] },
+      { name: 'CONFUCIUS SECONDARY SCHOOL', categories: ['Cities.culture.art'], impacts: ['Creative Solution'] },
+      { name: 'DANISH DESIGN AWARD', categories: ['Cities.culture.art'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+      { name: 'WORLD DESIGN CAPITAL', categories: ['Cities.culture.art'], impacts: ['East.West'] },
+      { name: 'BANGKOK INTL DESIGN EXPO', categories: ['Cities.culture.art'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'PENANG INSTITUTE', categories: ['Cities.culture.art'], impacts: ['Branding'] },
+      { name: 'YUAN MUSEUM', categories: ['Cities.culture.art'], impacts: ['East.West'] },
+      { name: 'PALACE MUSEUM', categories: ['Cities.culture.art'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'ZENG FANZHI', categories: ['Cities.culture.art'], impacts: ['Branding'] },
+      { name: 'TED / TEDX', categories: ['Ecosystems'], impacts: ['East.West'] },
+      { name: 'BURNING MAN', categories: ['Ecosystems'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'PAN ASIA NETWORK', categories: ['Ecosystems'], impacts: ['Branding'] },
+      { name: 'SHANGHAI INDUSTRIAL MUSEUM', categories: ['Ecosystems'], impacts: ['East.West'] },
+      { name: 'EARTH ONE', categories: ['Ecosystems'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'ALTER PROJECTS', categories: ['Ecosystems'], impacts: ['Branding'] },
+      { name: 'ASIA-EUROPE BRIDGE', categories: ['Ecosystems'], impacts: ['Branding'] },
+      { name: 'BLOOMINGDALES NEW YORK', categories: ['Yesteryears'], impacts: ['Branding'] },
+      { name: 'THE NEW YORK TIMES', categories: ['Yesteryears'], impacts: ['Branding'] },
+      { name: 'URBAN ARCH BI-CITY BIENNALE', categories: ['Yesteryears'], impacts: ['Branding'] },
+      { name: 'ISETAN', categories: ['Yesteryears'], impacts: ['Branding'] },
+      { name: 'BENETTON', categories: ['Yesteryears'], impacts: ['Branding'] },
+      { name: 'SOTHEBYS AUCTION HOUSE, INTL REALTY', categories: ['Yesteryears'], impacts: ['Branding'] }
     ];
 
     const impactRingMap = {
