--- a/example/network/index.html
+++ b/example/network/index.html
@@ -38,7 +38,7 @@
       { name: 'SAUVEREIGN', categories: ['Investment'], impacts: ['Branding', 'Retail'] },
       { name: 'DONGHAI', categories: ['Investment'], impacts: ['East.West', 'Strategy.Culture'] },
       { name: 'EASTERN SEAS', categories: ['Investment'], impacts: ['Creative Solution'] },
-      { name: 'DANDELION', categories: ['YInvestment'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+      { name: 'DANDELION', categories: ['Investment'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
       { name: 'BILI Q', categories: ['Investment'], impacts: ['East.West'] },
       { name: 'KYOTO ART BANK', categories: ['Investment'], impacts: ['Culture', 'Creative Solution'] },
       { name: 'ARAMIS WINES', categories: ['Investment'], impacts: ['Branding'] },
