--- a/example/network/index.html
+++ b/example/network/index.html
@@ -135,29 +135,42 @@
     .enableNodeDrag(false)
     .linkDirectionalParticles(0)
     .linkWidth(() => 0.5)
-    .linkColor(() => '#000000')
+    .linkColor(() => '#aaa')
+    .linkPositionUpdate((link) => {
+      const source = nodes.find(n => n.id === link.source);
+      const target = nodes.find(n => n.id === link.target);
+
+      if (!source || !target || link.source === centerNodeId) return;
+
+      const dx = target.x - source.x;
+      const dy = target.y - source.y;
+      const length = Math.sqrt(dx * dx + dy * dy);
+
+      const extendRatio = 1.2;
+      target.x = source.x + dx * extendRatio;
+      target.y = source.y + dy * extendRatio;
+    })
     .nodeCanvasObject((node, ctx, globalScale) => {
       if (node.id === centerNodeId) {
-    // Draw concentric rings around center
         ctx.save();
-    ctx.translate(node.x, node.y); // Needed to draw arcs at the center node's position
-    ctx.strokeStyle = '#ddd';
-    ctx.lineWidth = 1;
-    for (let i = 0; i < maxLayers; i++) {
-      ctx.beginPath();
-      ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
-      ctx.stroke();
-    }
-    ctx.restore();
-  } else {
-    // Draw normal node
-    const size = node.size || 4;
-    ctx.beginPath();
-    ctx.arc(node.x, node.y, size, 0, 2 * Math.PI, false);
-    ctx.fillStyle = node.color || '#666';
-    ctx.fill();
-  }
-});
+        ctx.translate(node.x, node.y);
+        ctx.strokeStyle = '#ddd';
+        ctx.lineWidth = 1;
+        for (let i = 0; i < maxLayers; i++) {
+          ctx.beginPath();
+          ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
+          ctx.stroke();
+        }
+        ctx.restore();
+      } else {
+        const size = node.size || 4;
+        ctx.beginPath();
+        ctx.arc(node.x, node.y, size, 0, 2 * Math.PI, false);
+        ctx.fillStyle = node.color || '#666';
+        ctx.fill();
+      }
+    });
+
 
     // Filters UI
     const allCategories = [...new Set(entities.flatMap(e => e.categories))];
